--- a/GeoQuiz/quiz-card-light.css
+++ b/GeoQuiz/quiz-card-light.css
@@ -160,7 +160,6 @@ body {
 
 .score {
     margin-left: 10px;
-    display: none;
 }
 
 .home {
@@ -303,4 +302,29 @@ input[type="radio"] {
 .reload-button:hover,
 .back-button:hover {
     color: var(--yellow);
+}
+
+.hamburger {
+    display: none;
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .navbar-right {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .navbar-right.active {
+        display: flex;
+    }
 }
