--- a/GeoQuiz/quiz-card.css
+++ b/GeoQuiz/quiz-card.css
@@ -160,7 +160,6 @@ body {
 
 .score {
     margin-left: 10px;
-    display: none;
 }
 
 .home {
@@ -284,23 +283,41 @@ input[type="radio"] {
 }
 
 .reload-button {
-    color: var(--red);
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    border: none;
-    width: 60px;
-    height: 60px;
-    font-size: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+    position: absolute;
+    bottom: 40px;
+    left: 40px;
+    font-size: 45px;
     text-decoration: none;
+    color: var(--red);
 }
 
 .reload-button:hover,
 .back-button:hover {
     color: var(--yellow);
+}
+
+
+.hamburger {
+    display: none;
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .navbar-right {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .navbar-right.active {
+        display: flex;
+    }
 }
