--- a/GeoQuiz/login-styles-light.css
+++ b/GeoQuiz/login-styles-light.css
@@ -1,5 +1,6 @@
 body {
     font-family: var(--text-font);
+    background-color: var(--mainbackgroundlight) !important;
 
 }
 
@@ -76,7 +77,6 @@ body {
 
 .toggle-input {
     display: none;
-    /* Ascunde input-ul original */
 }
 
 .toggle-label {
@@ -106,7 +106,6 @@ body {
 
 .toggle-input:checked+.toggle-label::after {
     transform: translateX(20px);
-    /* Ajustăm transformarea pentru a mișca butonul de comutare la dreapta */
 }
 
 
@@ -158,13 +157,40 @@ body {
 
 }
 
-.container-login {
+.welcome {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+    text-align: center;
+    padding-top: 70px;
     background-color: var(--mainbackgroundlight);
+    color: black;
+}
+
+.welcome:hover {
+    color: var(--yellow)
+}
+
+.container-login {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 50px auto;
+    max-width: 960px;
+    padding: 20px;
+}
+
+.login-form,
+.login-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+}
+
+.login-image {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    opacity: var(--opacity2);
 }
 
 .login-form {
@@ -198,15 +224,25 @@ body {
 .form-content .input-field {
     padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 3px;
     font-size: 16px;
+    border-radius: 20px;
+
+}
+
+.title-image {
+    width: 60px;
+    height: auto;
+    border-radius: 50%;
+    display: block;
+    margin: auto;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .button {
     padding: 10px;
     color: black;
     border: none;
-    border-radius: 3px;
+    border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
 
@@ -216,6 +252,12 @@ body {
     background-color: var(--yellow);
     color: black;
     border-color: #2d2929cc
+}
+
+.signup {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .signup-link a {
@@ -249,5 +291,21 @@ body {
 
     .navbar-right.active {
         display: flex;
+    }
+
+    .navbar-right .user-info {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container-login {
+        grid-template-columns: 1fr;
+        padding: 0px 70px 0px 70px;
+        justify-content: center;
+    }
+
+
+    .login-form {
+        order: -1;
     }
 }
