--- a/GeoQuiz/mainpage-light.css
+++ b/GeoQuiz/mainpage-light.css
@@ -127,6 +127,12 @@ body {
     margin-right: 10px;
 }
 
+.link-welcome {
+    color: black;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
 .user-info {
     display: flex;
     justify-content: space-between;
@@ -265,7 +271,12 @@ p {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
+.user-info .user-welcome {
+    display: flex;
+    flex-direction: row;
+}
+
+@media (max-width: 480px) {
     .hamburger {
         display: block;
     }
@@ -274,9 +285,26 @@ p {
         display: none;
         flex-direction: column;
         width: 100%;
+
     }
 
     .navbar-right.active {
         display: flex;
+
+    }
+
+    .user-info .span-score,
+    .user-info .user-welcome {
+        display: flex;
+        flex-direction: row;
+
+    }
+
+
+
+    .navbar-right .user-info {
+        display: flex;
+        flex-direction: column;
+
     }
 }
