--- a/GeoQuiz/quiz-card-light.css
+++ b/GeoQuiz/quiz-card-light.css
@@ -191,6 +191,7 @@ body {
     padding: 20px;
     text-align: center;
     width: 400px;
+    height: 500px;
     transition: transform 0.3s ease;
     margin: 20px auto;
 }
@@ -313,18 +314,53 @@ input[type="radio"] {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
+.welcome-nav {
+    color: black;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.user-info .user-welcome {
+    display: flex;
+    flex-direction: row;
+}
+
+@media (max-width: 480px) {
     .hamburger {
         display: block;
     }
+
+
 
     .navbar-right {
         display: none;
         flex-direction: column;
         width: 100%;
+
     }
 
     .navbar-right.active {
         display: flex;
+
+    }
+
+    .user-info .span-score,
+    .user-info .user-welcome {
+        display: flex;
+        flex-direction: row;
+
+    }
+
+
+    .quiz-card {
+        width: auto;
+    }
+
+
+
+    .navbar-right .user-info {
+        display: flex;
+        flex-direction: column;
+
     }
 }
