--- a/GeoQuiz/signup-styles-light.css
+++ b/GeoQuiz/signup-styles-light.css
@@ -150,6 +150,11 @@ body {
     display: none;
 }
 
+.login-link {
+    display: flex;
+    flex: row;
+    justify-content: space-between;
+}
 
 .home {
     margin-right: 10px;
@@ -196,7 +201,7 @@ body {
 .form-content .input-field {
     padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 3px;
+    border-radius: 20px;
     font-size: 16px;
 }
 
@@ -204,7 +209,7 @@ body {
     padding: 10px;
     color: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
     color: black;
