--- a/GeoQuiz/quiz-card-light.css
+++ b/GeoQuiz/quiz-card-light.css
@@ -284,20 +284,12 @@ input[type="radio"] {
 }
 
 .reload-button {
-    color: var(--yellow);
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    border: none;
-    width: 60px;
-    height: 60px;
-    font-size: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+    position: absolute;
+    bottom: 40px;
+    left: 40px;
+    font-size: 45px;
     text-decoration: none;
+    color: var(--yellow);
 }
 
 .reload-button:hover,
